# sdk-python

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
examples/: async_example.py  basic.py  error_handling.py  retry_config.py  with_logging.py
infomance/: __init__.py  client.py  exceptions.py  retry.py  types.py
tests/: __init__.py  conftest.py  test_client.py  test_retry.py
